# mne-videobrowser

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement-idea.md  feature---enhancement-idea.md
.github/workflows/: quality.yml  tests.yml
docs/: environment.yml  requirements.txt
docs/source/: api.rst  class_diagram.rst  conf.py  examples.rst  index.rst  synchronization.rst
docs/source/_templates/autosummary/: class.rst
examples/: README.md  audio_browser.py  audio_meg_sync.py  example_utils.py  multiple_meg_video_sync.py  two_video_audio_meg_sync.py  two_video_meg_sync.py  video_audio_meg_sync.py  video_browser.py  video_meg_sync.py  video_sample_meg_sync.py
scripts/: video_audio.py
src/mne_videobrowser/: __init__.py  browser_synchronizer.py  comp_tstamps.py  raw_timestamp_computaton.py  timestamp_aligner.py
src/mne_videobrowser/browsers/: audio_browser.py  gui_utils.py  syncable_browser.py  video_browser.py
src/mne_videobrowser/media/: audio.py  helsinki_videomeg_file_utils.py  video.py
tests/: test_raw_video_aligner.py  test_version.py  test_video.py  test_video_browser.py
