[project]
name = "mne-videobrowser"
version = "0.1.2"
description = "Browse video and audio in sync with MEG/EEG data"
readme = "README.md"
authors = [
    { name = "Teemu Taivainen", email = "ttaiv@outlook.com" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

keywords = ["eeg", "meg", "brain", "video", "audio", "neuroimaging", "neuroscience"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video :: Display",
]

requires-python = ">=3.10"
# This list only the dependencies that are meant to be installed with pip!
# MNE-Python should be installed with conda, see README for installation instructions.
dependencies = ["opencv-python-headless", "sounddevice"]
[project.optional-dependencies]
dev = [
  "pytest",
  "PyQt5-stubs"  # this helps IDE with type hints
]

[project.urls]
Repository = "https://github.com/ttaiv/mne-videobrowser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["A", "B006", "D", "E", "F", "I", "UP", "UP031", "W"]
ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D413",  # Missing blank line after last section
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = [
  "mne.utils.copy_doc",
  "mne.utils.copy_function_doc_to_method_doc",
  "mne.utils.deprecated",
  "property",
  "setter",
]

[tool.pyright.defineConstant]
PYQT5 = true
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = false

[tool.pyright]
typeCheckingMode = "standard"