[project]
name = "mne-videobrowser"
version = "0.1.5"
description = "Python package for browsing video and audio time-synchronized to MEG/EEG data"
readme = "README.md"
authors = [
    { name = "Teemu Taivainen", email = "ttaiv@outlook.com" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

keywords = ["eeg", "meg", "brain", "video", "audio", "neuroimaging", "neuroscience"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video :: Display",
]

requires-python = ">=3.10"
dependencies = [
  "mne>=1.10.1",
  "mne-qt-browser>=0.7.2",
  "PyQt5>=5.15.11",
  "opencv-python-headless>=4.12.0.88",
  "sounddevice>=0.5.2"]
[project.optional-dependencies]
dev = [
  "pytest",
  "PyQt5-stubs",  # this helps IDE with type hints
  # Documentation dependencies
  "sphinx",
  "pydata-sphinx-theme",
]

[project.urls]
Repository = "https://github.com/ttaiv/mne-videobrowser"
Documentation = "https://mne-videobrowser.readthedocs.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["A", "B006", "D", "E", "F", "I", "UP", "UP031", "W"]
ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D413",  # Missing blank line after last section
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = [
  "mne.utils.copy_doc",
  "mne.utils.copy_function_doc_to_method_doc",
  "mne.utils.deprecated",
  "property",
  "setter",
]

[tool.pyright.defineConstant]
PYQT5 = true
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = false

[tool.pyright]
typeCheckingMode = "standard"